🐛 Fixed a styling bug on mobile

--- a/FlockingSimulation/scss/styles.scss
+++ b/FlockingSimulation/scss/styles.scss
@@ -1,8 +1,16 @@
 @import "reset";
 @import "default";
 
+body {
+    background-color: #000000;
+}
+
+p {
+    color: #ffffff;
+}
+
 #simulationContainer {
-    background-color: gray;
+    background-color: #000000;
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
